spade-tests/src/snapshots/spade_tests__ast_lowering__macros_without_rules_are_forbidden.snap
---
source: spade-tests/src/ast_lowering.rs
---
macro empty {}


error: Macros must contain at least one rule
  ┌─ testinput:1:1
  │
1 │ macro empty {}
  │ ^^^^^^^^^^^^^^
